--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "SS_musiqe"
+title                    : "ss_musiqe"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Park SengSik"
+name                     : "Park Seng Sik"
 description              : "An amazing website."
 url                      : "https://parksengsik.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
