--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,9 @@ locale                   : "en-US"
 title                    : "ss_musiqe"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Park Seng Sik"
+name                     : "park seng sik"
 description              : "An amazing website."
-url                      : "https://parksengsik.github.io"
+url                      : "https://parksengsik.github.io/sengsik.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
