--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   name             : "ParkSengSik"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "**For Projet**"
-  location         : "Somewhere"
+  location         : "AI Project"
   email            :
   links:
     - label: "Email"
