--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,11 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "SS_Musiqe"
+title                    : "Katia Soft"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "ParkSengSik"
-description              : "For Project"
+description              : "Project Manager"
 url                      : "https://parksengsik.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
