--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "ParkSengSik"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "**For Projet**"
+  bio              : "**Project Blog**"
   location         : "AI Project"
   email            :
   links:
